--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ bevy = "0.10.1"
 bevy_prototype_lyon = "0.8"
 bevy_fly_camera = "0.10"
 bevy_transform_gizmo = "0.6"
+actix-files = "0.6.2"
+actix-web = "4.3.1"
 
 [dev-dependencies]
 trunk = "0.16"
